--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.8",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -24,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
